--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,6 +6,7 @@ Description: Provides database utilities for reading and writing to the database
     when developing RModel for Solvas Capital.
 Depends:
     R (>= 3.2.2)
+Imports: reshape2 (>= 1.4.1), RODBC(>= 1.3-12)
 License: What license is it under?
 LazyData: true
 RoxygenNote: 5.0.1
