Package with several alternative ways to do objects in R using fi_get_instruments as the base example (in most cases!). Struggle with how the documenation comes out.  The comprimise I found the most appealing is the S3V2.  Its much like 'c' objects where you pass in a struct to each of your 'member' functions and the struct acts like the class data and the functions that take the struct are the methodes.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
-Package: Solvas.Caplital.SQLUtility
+Package: Solvas.Capital.SQLUtility
 Title: Provide database utilities for
-Version: 0.0.0.9000
+Version: 0.0.0.9001
 Authors@R: person("Mark","Alberts", email="malberts@deloitte.com", role=c("aut","cre"))
 Description: Provides database utilities for reading and writing to the database
-    when developing RModel for Solvas Capital.
+    use for developing R Models for Solvas|Capital.
 Depends:
     R (>= 3.2.2)
 Imports: reshape2 (>= 1.4.1), RODBC(>= 1.3-12)
