--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,14 @@
 Package: Solvas.Capital.SqlUtility
 Title: Provide database utilities for
-Version: 0.0.0.9001
+Version: 0.0.0.9002
 Authors@R: person("Mark","Alberts", email="malberts@deloitte.com", role=c("aut","cre"))
+Author: Mark Alberts [aut, cre]
+Maintainer: Mark Alberts <malberts@deloitte.com>
 Description: Provides database utilities for reading and writing to the database
     use for developing R Models for Solvas|Capital.
 Depends:
     R (>= 3.2.2)
 Imports: reshape2 (>= 1.4.1), RODBC(>= 1.3-12)
-License: What license is it under?
+License: file LICENSE
 LazyData: true
 RoxygenNote: 5.0.1
