--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,8 +4,10 @@ export(DataAccess)
 export(DataAccess.ConnectionStatus)
 export(DataAccess.FiInstrumentGet)
 export(DataAccess.FsAssumptionsGet)
+export(DataAccess.PackageVersionCompatible)
 export(SPFIInstrumentGet)
 export(SPFSAssumptionsGet)
 export(SPInstrumentPropertyLoad)
+export(SPPackageVersionCompatible)
 import(RODBC)
 import(reshape2)
