Create DataAccess.FsInitalAccountBalanceGet to get inital account balances (and added supporing lower level functions) Support for put will be in another branch.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,9 +4,12 @@ export(DataAccess)
 export(DataAccess.ConnectionStatus)
 export(DataAccess.FiInstrumentGet)
 export(DataAccess.FsAssumptionsGet)
+export(DataAccess.FsInitalAccountBalanceGet)
 export(DataAccess.PackageVersionCompatible)
 export(SPFIInstrumentGet)
+export(SPFSAccountBalancePut)
 export(SPFSAssumptionsGet)
+export(SPFSInitialAccountBalanceGet)
 export(SPInstrumentPropertyLoad)
 export(SPPackageVersionCompatible)
 import(RODBC)
