--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,5 +14,6 @@ export(SPFSInitialAccountBalanceGet)
 export(SPInstrumentPropertyLoad)
 export(SPPackageVersionCompatible)
 import(RODBC)
+import(plyr)
 import(reshape2)
 import(stats)
