--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,7 @@ Description: Provides database utilities for reading and writing to the database
     use for developing R Models for Solvas|Capital.
 Depends:
     R (>= 3.2.2)
-Imports: reshape2 (>= 1.4.1), RODBC(>= 1.3-12), plyr
+Imports: reshape2 (>= 1.4.1), RODBC(>= 1.3-12), plyr, stringr
 License: file LICENSE
 LazyData: true
 RoxygenNote: 6.0.1
